Added several constraints